--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -12,7 +12,7 @@ published: true
 
 <div class="panel">
       <h5>Sterling equivalent rates</h5>
-      <p>Please note that while prices are quoted in Sterling below, these are only equivalent prices as of 30/01/2013. <b>All payments will be processed in Euro only. </b></p>
+      <p>Please note that while prices are quoted in Sterling below, these are only equivalent prices as of 30/01/2013. <b>All payments will be processed in Euro only. Please note registration has now closed </b></p>
 </div>
 
 <div class="twelve columns">
@@ -25,7 +25,7 @@ published: true
   <li class="bullet-item">RTPI, Urban Forum Members and Councillors</li>
   <li class="bullet-item">Admission to Conference Dinner included.</li>
   <li class="bullet-item">Choice of Fieldtrip on 2nd Day.</li>
-  <li class="cta-button"><a class="button radius success" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=CONF2DM">Buy it Now &raquo;</a>
+  <li class="cta-button"><a class="button radius success" href="http://">Buy it Now &raquo;</a>
   </li>
 </ul>
 
@@ -40,7 +40,7 @@ published: true
   <li class="bullet-item">Admission to Conference Dinner included.</li>
   <li class="bullet-item">Ideal opportunity network with Built Environment Professionals.</li>
   <li class="bullet-item">Choice of Fieldtrip on 2nd Day.</li>
-  <li class="cta-button"><a class="button radius alert" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=CONF2DNM">Buy it Now &raquo;</a>
+  <li class="cta-button"><a class="button radius alert" href="http:">Buy it Now &raquo;</a>
   </li>
 </ul>
 </div> 
@@ -55,7 +55,7 @@ published: true
   <li class="bullet-item">IPI Members</li> 
   <li class="bullet-item">RTPI, Urban Forum Members and Councillors</li>
   <li class="bullet-item">Admission to Conference Dinner included.</li>
-  <li class="cta-button"><a class="button radius" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=CONF1DM">Buy it Now &raquo;</a>
+  <li class="cta-button"><a class="button radius" href="http://www.">Buy it Now &raquo;</a>
   </li>
 </ul>
 </div>
@@ -68,7 +68,7 @@ published: true
   <li class="bullet-item">Non Members</li>
 	<li class="bullet-item">Ideal for attending Key Note speeches.</li>
   <li class="bullet-item">Admission to Conference Dinner included.</li>
-  <li class="cta-button"><a class="button radius alert" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=CONF1DNM">Buy it Now &raquo;</a>
+  <li class="cta-button"><a class="button radius alert" href="http://www.">Buy it Now &raquo;</a>
   </li>
 </ul>
 </div>
@@ -82,7 +82,7 @@ published: true
   <li class="bullet-item">IPI Members</li> 
   <li class="bullet-item">RTPI, Urban Forum Members and Councillors</li>
   <li class="bullet-item">Does not include conference dinner.</li>
-  <li class="cta-button"><a class="button radius" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=CONF1M">Buy it Now &raquo;</a>
+  <li class="cta-button"><a class="button radius" href="http://www.">Buy it Now &raquo;</a>
   </li>
 </ul>
 </div>
@@ -94,7 +94,7 @@ published: true
   <li class="bullet-item">Non Members</li>
 <li class="bullet-item">Ideal for attending Key Note speeches.</li>
   <li class="bullet-item">Does not include conference dinner.</li>
-  <li class="cta-button"><a class="button radius alert" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=CONF1NM">Buy it Now &raquo;</a>
+  <li class="cta-button"><a class="button radius alert" href="http://www.">Buy it Now &raquo;</a>
   </li>
 </ul>
 </div>
@@ -109,7 +109,7 @@ published: true
   <li class="price">€65 / £55</li>
   <li class="description">Admittance to Conference Dinner Only</li>
   <li class="bullet-item">Belfast City Hall</li>
-  <li class="cta-button"><a class="button radius success" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=CONFDIN">Buy it Now &raquo;</a>
+  <li class="cta-button"><a class="button radius success" href="http://www.">Buy it Now &raquo;</a>
   </li>
 </ul>
 **Places are allocated on a first come, first served basis.**
@@ -123,7 +123,7 @@ published: true
   <li class="description">Students or Unwaged Members Only</li>
   <li class="bullet-item">2 Day Rate incl. Dinner.</li>
   <li class="bullet-item">Documentation of circumstances may be requested by the IPI Office.</li>
-  <li class="cta-button"><a class="button radius alert" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=CONF2DSW">Buy it Now &raquo;</a>
+  <li class="cta-button"><a class="button radius alert" href="http://www.W">Buy it Now &raquo;</a>
   </li>
 </ul>
 **Places are allocated on a first come, first served basis.**
